Edited portfolio project descriptions

--- a/portfolio-pages/austinmn-symphony.html
+++ b/portfolio-pages/austinmn-symphony.html
@@ -64,14 +64,15 @@
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>I completely redisgned the Austin Minnesota Symphony Orchestra website from scratch. The redesign focused on creating a dynamic homepage which would provide information as needed to users and to improve the graphical layout of the site. All graphical components of the site as well as the functionality was customed designed by me including carousel graphics and interactions. The site was built on Google Sites to allow for free nonprofit hosting and easy editing after the completion of the redesign. Among other components, I designed the following capabilities for the site: </p>
+                        <p>I completely redisgned the Austin Minnesota Symphony Orchestra website from scratch. The redesign focused on creating a dynamic homepage which would provide information as needed to users and to improve the graphical layout of the site. All graphical components of the site as well as the functionality were customed designed by me including carousel graphics and interactions. The Austin Symphony already had a free nonprofit Google Apps account and a previous website hosted through Google Sites, so I built this site to fit these client resources. Among other components, I designed the following capabilities for the site: </p>
                         <ul class="elements">
                             <li><i class="fa fa-angle-right"></i> Live ticket ordering form. </li>
                             <li><i class="fa fa-angle-right"></i> Live updates for upcoming concerts and events. </li>
                             <li><i class="fa fa-angle-right"></i> Social media integration for google+ and facebook integration.</li>
                         </ul>
                       
-                      <p>As part of this redesign, I focused heavily on how the web presence for the Austin MN symphony was being used to market the orchestra and could increase ticket sales and the overall customer experience.</p>
+                      <p>As part of this redesign, I focused heavily on how the web presence for the Austin MN symphony was being used to market the orchestra and could increase ticket sales and the overall customer experience. I began by spending time planning out the site based on examples of other successful symphony websites and making several mockups for site design and navigation which I took to the client for review and approval before building anything.</p>
+                      <p>I learned a great deal through this redesign on building a dynamic Google Sites homepage that pulled content updated on other pages on the site. I also learned how to embed external tools and Apps to create live forms (Jot Forms) and more interesting content such as the homepage Slider which, because of the limitations with Javascript and deeper customization on Google Sites, I built using a plugin based off of Google Slides. Ultimately, this ended up being beneficial for allowing the Austin MN Symphony to update and change the Google Slides to update the website slider without any knowledge of HTML/CSS.</p>
                     </div>
                     <div class="skills overflow">
                         <h3>Skills:</h3>
