--- a/portfolio-pages/dfa-badge.html
+++ b/portfolio-pages/dfa-badge.html
@@ -64,8 +64,8 @@
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>I was part of a team tasked with designing a new motivation system for Design for America studios housed in universities across the country. Our badging system was designed to motivate students in the Design for America studios across the country to complete the design process for design-based projects they are completing. Specifically, our badging system used established principles of motivation, practice and feedback, and mastery learning to improve the outcomes for students both in completion and quality of work. The badging system was designed with multiple levels such that each badge can be earned at a bronze, silver, or gold level. This was done in order to motivate students to want to achieve each level of the badge and thus complete the design process more completely. Every DFA team can complete a bronze level badge quickly and easily, motivating them to complete the task. However, as teams work more on the process for each badge, they can earn a silver or gold level badge, rewarding them for taking more time with each step of the design process. This was also done to incorporate practice and feedback as well as mastery of the design process into the badging system. The requirements for earning each badge have been clearly identified and the process streamlined for studio leads to approve the badge, making the system easy to both reward teams for completion and provide feedback without giving a grade or other form of formal critique. </p>
-                      <p>The full design proposal is included in the live preview link with the high level blueprint for how our badging system would work provided both in the master design document and the image on this page. As part of the process we completed all of these steps:</p>
+                        <p>I was part of a team tasked with designing a new motivation system for Design for America studios housed in universities across the country. Our badging system was designed to motivate students in the Design for America studios across the country to complete the design process for design-based projects. DfA is a non-profit organization which supports students in colleges and universities across the United States to complete design challenges for the social good by teaching students the design process from ideation through prototypes and testing.</p>
+                      <p>Specifically, our badging system used established principles of motivation, practice and feedback, and mastery learning to improve the outcomes for students both in completion and quality of work. The requirements for earning each badge were clearly identified and the process streamlined for studio leads to approve the badge, making the system easy to both reward teams for completion and provide feedback without giving a grade or other form of formal critique. The full design proposal is included in the live preview link with the high level blueprint for how our badging system would work provided both in the master design document and on this page. As part of the process we completed all of these steps:</p>
                         <ul class="elements">
                             <li><i class="fa fa-angle-right"></i> Focused on the problem through expert modeling.</li>
                             <li><i class="fa fa-angle-right"></i> Designed and user tested prototypes of badges and badge monitoring systems.</li>
@@ -73,6 +73,7 @@
                             <li><i class="fa fa-angle-right"></i> Participated in regular feedback and critique sessions to iterate on our design.</li>
                             <li><i class="fa fa-angle-right"></i> Formally presented the design ideas and proposals to the client.</li>
                         </ul>
+                      <p>Designing the learning solution involved understanding the design process on a very deep level and custom building a solution for our client. I learned how to provide motivation and feedback and how that can be uniquely challenging in an informal, volunteer, extracurricular environment such as DfA. I also learned how to complete the user-centered design process to complete a comprehensive design argument and proposal for our client. While it was initially uncomfortable, I also learned that getting constant feedback throughout the process of creating our badging design both helped to improve our design and also helped to solidify design ideas and quickly test and throw out bad ideas.</p>
                     </div>
                     <div class="skills overflow">
                         <h3>Skills:</h3>
@@ -81,6 +82,7 @@
                             <li><a href="#"><i class="fa fa-check-square"></i>Graphic Design</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>Learning Theory</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>Web Development</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>Game-Based Learning</a></li>
                         </ul>
                     </div>
                     <div class="client overflow">
