--- a/portfolio-pages/eccla.html
+++ b/portfolio-pages/eccla.html
@@ -64,13 +64,13 @@
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>The Early Childhood Council Leadership Alliance of Colorado--a statewide consortium of Early Childhood Councils--was formed in 2014 and needed a website to provide key information to member institutions. I worked closely with the board of directors to design a site that could provide just in time information for alliance member organizations. This site was built on Google sites and I proved training for key personnel in the use and upkeep of the site. This included:</p>
+                        <p>The Early Childhood Council Leadership Alliance of Colorado--a statewide consortium of Early Childhood Councils--was formed in 2014 and needed a website to provide key information to member institutions. I worked closely with the board of directors to design a site that could provide just in time information for alliance member organizations. ECCLA Colorado had a limited budget and was not looking for anything fancy as this site was meant primarily for internal purposes. As such, the site was built on Google Sites--where ECCLA Colorado already had a free non-profit Google Apps account--and I provided training for key personnel in the use and upkeep of the site. This included:</p>
                         <ul class="elements">
                             <li><i class="fa fa-angle-right"></i> A dynamic, sortable directory of member institutions</li>
-                            <li><i class="fa fa-angle-right"></i> Integration with google calendar and gogle drive for meeting minutes.</li>
+                            <li><i class="fa fa-angle-right"></i> Integration with Google Calendar and Google Drive for meeting minutes.</li>
                             <li><i class="fa fa-angle-right"></i> A password protected member only area for private member-specific content.</li>
                         </ul>
-                      <p>In addition, the logo and other graphical components of the site were designed by me.</p>
+                      <p>In addition, the logo and other graphical components of the site were designed by me. ECCLA already had a pretty good idea of what information they wanted on their site and a template for the navigation and pages. I worked to match the design to their navigation interests and color scheme. This project was particularly informative for me in learning how to support clients who had virtually no understand of web technologies and needed a very simple solution with no bells and whistles and which they could update easily. I focused on trying to build a site as much as possible which could be updated with no understanding of web design.</p>
                     </div>
                     <div class="skills overflow">
                         <h3>Skills:</h3>
