--- a/portfolio-pages/oakton-assessment.html
+++ b/portfolio-pages/oakton-assessment.html
@@ -64,13 +64,14 @@
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>As a relatively new office, the office on New Student Experiences had a heavy emphasis on assessment of learning outcomes. I completed a comprehensive learning outcome assessment map including the following tasks: </p>
+                        <p>As a relatively new office, the office on New Student Experiences had a heavy emphasis on assessment of learning outcomes. While working there, I thus completed a comprehensive learning outcome assessment map including the following tasks: </p>
                         <ul class="elements">
                             <li><i class="fa fa-angle-right"></i> Establishing desired learning outcomes for new students, parents, and student peer leaders.</li>
-                            <li><i class="fa fa-angle-right"></i> Banchmarking learning outcomes to local and national New Student Orientation Outcomes based on best practices research from the National Orientation Directors Association (NODA).</li>
+                            <li><i class="fa fa-angle-right"></i> Banchmarking learning outcomes to local and national New Student Orientation Outcomes based on best practices research from the National Orientation Directors Association (NODA) and the Oakton General Learning Outcomes.</li>
                             <li><i class="fa fa-angle-right"></i> Determined and implemented assessment methods for learning outcomes.</li>
-                            <li><i class="fa fa-angle-right"></i> Compiled and presented data on learning outcomes in a poster session (see live preview) and presentations.</li>
+                            <li><i class="fa fa-angle-right"></i> Compiled and presented data on learning outcomes in a poster session (see live preview) and presentation.</li>
                         </ul>
+                      <p>Before engaging in this project, I had never completed a learning outcome assessment plan before. As such, I learned how to establish an assessment map, create assessment methods and benchmarks, and ultimately assess the outcomes against those established assessment methods. This process taught me a great deal about how to measure information about program outcomes and to present that data in a way that is useful for administrators to use in making informed decisions. </p>
                       <p>The learning outcomes were compiled and presented to the Student Success and Retention Committee and New Student Orientation Board. The powerpoint is presented below:</p>
                       <iframe class="gslides" src="https://docs.google.com/presentation/d/17Y-gX3nxKNnQB94wWtHgneuWNkwexXd-cVW8NqTnbrg/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                     </div>
