--- a/portfolio-pages/ssc-marketing.html
+++ b/portfolio-pages/ssc-marketing.html
@@ -64,7 +64,7 @@
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>As a tutoring services coordinator for Riverland Community College Student Success Center, I redesigned numerous internal and external marketing materials. These materials were designed to modernize the look, increase the visibility, and promote new services offered by the Student Success Center and other campus partners. Materials designed or redesigned included:</p>
+                        <p>As a Tutoring Services Coordinator for the Riverland Community College Student Success Center, I redesigned numerous internal and external marketing materials. These materials were designed to modernize the look, increase the visibility, and promote new services offered by the Student Success Center and other campus partners. Materials designed or redesigned included:</p>
                         <ul class="elements">
                             <li><i class="fa fa-angle-right"></i> Web-based marketing materials and webpage designs for the Student Success Center, Tutoring Center, and Parent Center.</li>
                             <li><i class="fa fa-angle-right"></i> Printed marketing materials including brochures, bookmarks, posters, and flyers for the Student Success Center, Tutoring Center, Writing Center, Parent Center, and other departments.</li>
@@ -72,6 +72,7 @@
                             <li><i class="fa fa-angle-right"></i> HTML email promotional materials for events and services.</li>
                             <li><i class="fa fa-angle-right"></i> Promotional video of marketing release of new Tutoring Center services.</li>
                         </ul>
+                      <p>With a heavy emphasis on sustainability, I learned how to create marketing material templates using Microsoft Publisher so that these materials could be adapted and reused later. I also learned about branding and brand design, including how to promote the Riverland brand through using certain template concepts, mantaining color scheme, and being deliberate in how services were described in all materials.</p>
                     </div>
                     <div class="skills overflow">
                         <h3>Skills:</h3>
