--- a/portfolio-pages/training-manual.html
+++ b/portfolio-pages/training-manual.html
@@ -64,12 +64,13 @@
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>This tutor training manual was the result of a year ofAmeriCorps VISTA service at Riverland Community College. The peer tutoring program had been growing rapidly over the past several years but the quality of tutoring had not kept pace. Trainings were pulled together from disparate resources ad hoc and were not comprehensive or wholistically designed. This training manual was fully written and designed by me with support from the other professional tutoring center staff in order to compile and present a comprehensive and deliberately designed tutor training sequency in person and online. The fully interactive online training modules were also designed by me and more information can be found on the <a href="tutor-training.html">virtual tutor training project page.</a> For this manual included:</p>
+                        <p>This tutor training manual was the result of a year of AmeriCorps VISTA service at Riverland Community College. The peer tutoring program had been growing rapidly over the past several years but the quality of tutoring had not kept pace. Trainings were pulled together from disparate resources <i>ad hoc</i> and were not comprehensive or wholistically designed. This training manual was fully written and designed by me with support from the other professional tutoring center staff in order to compile and present a comprehensive and deliberately designed tutor training sequency in person and online. The fully interactive online training modules were also designed by me and more information can be found on the <a href="tutor-training.html">virtual tutor training project page.</a> This manual included:</p>
                         <ul class="elements">
                             <li><i class="fa fa-angle-right"></i> A fully designed interactive PDF including graphics designed with Adobe CC.</li>
                             <li><i class="fa fa-angle-right"></i> Compiled and written content for tutor training modules.</li>
                             <li><i class="fa fa-angle-right"></i> InDesign project file including dynamic sections and comprehensive index.</li>
                         </ul>
+                      <p>In designing this training manual, I created an InDesign template design which kept the layout clean and consistent throughout. I also focused on the organization of modules, the order of content, and creating mutliple tables of contents and a comprehensive index which I learned how to do in InDesign in order to make an accessibly and easily usable manual.</p>
                     </div>
                     <div class="skills overflow">
                         <h3>Skills:</h3>
