--- a/portfolio-pages/tutor-training.html
+++ b/portfolio-pages/tutor-training.html
@@ -64,18 +64,19 @@
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>The comprehensive online training modules were designed completely by me for the tutor training program at Riverland Community College as part of my AmeriCorps VISTA project. When I came to Riverland, the school was rapidly expanding to more online instruction and the tutoring program was expanding to adapt. This online training was built using SmartBuilder as a fully SCORM 1.4 and 2.0 compliant program to train tutors in the same comprehensive training program designed by me (more details on the <a href="training-manual.html">training manual project page</a>). The online training included among other things:</p>
+                        <p>These comprehensive online training modules were designed completely by me for the tutor training program at Riverland Community College as part of my AmeriCorps VISTA project. When I came to Riverland, the school was rapidly expanding to more online instruction and the tutoring program was expanding to adapt. This online training was built using SmartBuilder as a fully SCORM 1.4 and 2.0 compliant program to train tutors in the same comprehensive training program designed by me (more details on the <a href="training-manual.html">training manual project page</a>). The online training included among other things:</p>
                         <ul class="elements">
                             <li><i class="fa fa-angle-right"></i> Interactive game-based learning modules.</li>
                             <li><i class="fa fa-angle-right"></i> Responsive virtual tutoring simulation environment.</li>
                             <li><i class="fa fa-angle-right"></i> Comprehensive modules structure.</li>
                             <li><i class="fa fa-angle-right"></i> Universal design concepts for accessibility compliance.</li>
                         </ul>
+                      <p>To complete this project, I spent time learning not only how to program the interactive learning environment on the free SmartBuider platform, but also on adult learning theory and online learning modules. This was my first project working with online learning and I went through several different designs and interactive lessons before settling on modules which proved effective at teaching our tutors the leanring theory and tutoring techniques to be effective tutors. All of the graphics, including the background art, were created in PhotoShop and were based on the actual tutoring center and featured actual tutors from our center.</p>
                     </div>
                     <div class="skills overflow">
                         <h3>Skills:</h3>
                         <ul class="nav navbar-nav navbar-default">
-                            <li><a href="#"><i class="fa fa-check-square"></i>Design</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>Graphic Design</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>E-Learning Authoring</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>SmartBuilder</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>Adult Learning Theory</a></li>
