--- a/portfolio-pages/virtual-orientation.html
+++ b/portfolio-pages/virtual-orientation.html
@@ -71,6 +71,7 @@
                             <li><i class="fa fa-angle-right"></i> Establishing methods of building and supporting online community through discussion boards and social media integration for content.</li>
                             <li><i class="fa fa-angle-right"></i> And, finally, building assessment techniques through a combination of assessment questions and completion benchmarks.</li>
                         </ul>
+                      <p>To create this online orientation, I built off prior experience with online learning development including creating scorm compliant learning modules, learning outcome assessment plans, and multimedia production. The multimedia-heavy nature of this orientation in particular lent itself to creating helpful information in bite-sized chunks delivered by fellow students who had also been new students not long before.</p>
                     </div>
                     <div class="skills overflow">
                         <h3>Skills:</h3>
