--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
               <div class="col-sm-12 text-center bottom-separator">
                     <img src="images/home/under.png" class="img-responsive inline" alt="">
                 </div>
-              <div class="">
+              <div class="col-sm-12">
                     <div class="testimonial bottom">
                         <h2>Testimonials</h2>
                       <div class="media">
