updated ssc marketing materials page

--- a/portfolio-pages/ssc-marketing.html
+++ b/portfolio-pages/ssc-marketing.html
@@ -52,7 +52,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <img src="../images/portfolio-details/ssc-marketing.png" class="img-responsive" alt="">
+                    <a href="https://youtu.be/P9go85UWM3M" target="_blank"><img src="../images/portfolio-details/ssc-marketing.png" class="img-responsive" alt=""></a>
                 </div>
                 <div class="col-sm-6">
                     <div class="project-name overflow">
