--- a/portfolio-pages/onebook.html
+++ b/portfolio-pages/onebook.html
@@ -64,45 +64,37 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <a href="https://youtu.be/P9go85UWM3M" target="_blank"><img src="../images/portfolio-details/ssc-marketing.png" class="img-responsive" alt=""></a>
+                    <img src="../images/portfolio-details/onebook.png" class="img-responsive" alt="">
                 </div>
                 <div class="col-sm-6">
                     <div class="project-name overflow">
-                        <h2 class="bold">Riverland SSC Marketing Materials </h2>
+                        <h2 class="bold">One Book, One Northwestern Calendar </h2>
                         <ul class="nav navbar-nav navbar-default">
-                            <li><a href="#"><i class="fa fa-clock-o"></i>2013-2014</a></li>
-                            <li><a href="#"><i class="fa fa-tags"></i>Marketing, Web Design</a></li>
+                            <li><a href="#"><i class="fa fa-clock-o"></i>2015</a></li>
+                            <li><a href="#"><i class="fa fa-tags"></i>Marketing</a></li>
                         </ul>
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>As a Tutoring Services Coordinator for the Riverland Community College Student Success Center, I redesigned numerous internal and external marketing materials. These materials were designed to modernize the look, increase the visibility, and promote new services offered by the Student Success Center and other campus partners. Materials designed or redesigned included:</p>
-                        <ul class="elements">
-                            <li><i class="fa fa-angle-right"></i> Web-based marketing materials and webpage designs for the Student Success Center, Tutoring Center, and Parent Center.</li>
-                            <li><i class="fa fa-angle-right"></i> Printed marketing materials including brochures, bookmarks, posters, and flyers for the Student Success Center, Tutoring Center, Writing Center, Parent Center, and other departments.</li>
-                            <li><i class="fa fa-angle-right"></i> Promotional materials for various events hosted by the Student Success Center, Tutoring Center, Parent Center, and other Riverland departments and offices.</li>
-                            <li><i class="fa fa-angle-right"></i> HTML email promotional materials for events and services.</li>
-                            <li><i class="fa fa-angle-right"></i> Promotional video of marketing release of new Tutoring Center services.</li>
-                        </ul>
-                      <p>With a heavy emphasis on sustainability, I learned how to create marketing material templates using Microsoft Publisher so that these materials could be adapted and reused later. I also learned about branding and brand design, including how to promote the Riverland brand through using certain template concepts, mantaining color scheme, and being deliberate in how services were described in all materials.</p>
+                        <p>The One Book, One Northwestern program needed a calendar of events for their year-long program. This calendar was designed using the full adobe creative suite in consultation with various stakeholders for event information and design critiques. I designed the graphics and layout of the calendar completely from scratch to match high-resolution commercial printing standards. </p>
+                      <p>Graphical elements were custom designed using vector graphics for scalability in printing. Custom fonts and patterns were used to give the overall design a cohesive and distinctive theme, which matched the theme for One Book, One Northwestern, which that year focused on Native American rights and issues.</p>
                     </div>
                     <div class="skills overflow">
                         <h3>Skills:</h3>
                         <ul class="nav navbar-nav navbar-default">
                             <li><a href="#"><i class="fa fa-check-square"></i>Graphic Design</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>Web Design</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>HTML/CSS</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>Multimedia Production</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>Information Design</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>Marketing</a></li>
                         </ul>
                     </div>
                     <div class="client overflow">
                         <h3>Client:</h3>
                         <ul class="nav navbar-nav navbar-default">
-                            <li><a href="http://www.riverland.edu" target="_blank"><i class="fa fa-bolt"></i>Riverland Community College</a></li>
+                            <li><a href="http://www.northwestern.edu/onebook/" target="_blank"><i class="fa fa-bolt"></i>Northwestern University</a></li>
                         </ul>
                     </div>
                     <div class="live-preview">
-                        <a href="https://drive.google.com/folderview?id=0B7-QMoqsr7BnfmVzX1pZN2trTHFWWDdKZ1FFSEpIWnFMVUVwNi04TnNnM2hWRVZCbGJWMHM&usp=sharing" target="_blank" class="btn btn-common uppercase">Live preview</a>
+                        <a href="https://drive.google.com/file/d/0B7-QMoqsr7BnelNCNVo1YjhRS0k/view?usp=sharing" target="_blank" class="btn btn-common uppercase">Live preview</a>
                     </div>
                 </div>
             </div>
@@ -136,17 +128,17 @@
                     <div class="portfolio-wrapper">
                         <div class="portfolio-single">
                             <div class="portfolio-thumb">
-                                <img src="../images/portfolio/12.png" class="img-responsive" alt="">
+                                <img src="../images/portfolio/8.png" class="img-responsive" alt="">
                             </div>
                             <div class="portfolio-view">
                                   <ul class="nav nav-pills">
-                                      <li><a href="../portfolio-pages/onebook.html"><i class="fa fa-link"></i></a></li>
+                                      <li><a href="../portfolio-pages/ssc-marketing.html"><i class="fa fa-link"></i></a></li>
 
                                   </ul>
                               </div>
                         </div>
                         <div class="portfolio-info ">
-                            <h2>One Book, One Northwestern Calendar</h2>
+                            <h2>Riverland SSC Marketing</h2>
                         </div>
                     </div>
                 </div>
