added nu chemistry brochure project

--- a/index.html
+++ b/index.html
@@ -330,25 +330,24 @@
                             </div>
                         </div>
                     </div>
-<!--
-                    <div class="col-xs-6 col-sm-4 col-md-3 portfolio-item design folio">
+                    <div class="col-xs-6 col-sm-4 col-md-3 portfolio-item market">
                         <div class="portfolio-wrapper">
                             <div class="portfolio-single">
                                 <div class="portfolio-thumb">
-                                    <img src="images/portfolio/11.jpg" class="img-responsive" alt="">
+                                    <img src="images/portfolio/13.jpg" class="img-responsive" alt="">
                                 </div>
                                 <div class="portfolio-view">
                                     <ul class="nav nav-pills">
-                                        <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
-                                        <li><a href="images/portfolio/11.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
+                                        <li><a href="portfolio-pages/nu-chem.html"><i class="fa fa-link"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="portfolio-info ">
-                                <h2>Sailing Vivamus</h2>
+                                <h2>Northwestern Chemistry Brochure</h2>
                             </div>
                         </div>
                     </div>
+<!--
                     <div class="col-xs-6 col-sm-4 col-md-3 portfolio-item branded mockup">
                         <div class="portfolio-wrapper">
                             <div class="portfolio-single">
