--- a/portfolio-pages/onebook.html
+++ b/portfolio-pages/onebook.html
@@ -110,17 +110,17 @@
                     <div class="portfolio-wrapper">
                         <div class="portfolio-single">
                             <div class="portfolio-thumb">
-                                <img src="../images/portfolio/9.png" class="img-responsive" alt="">
+                                <img src="../images/portfolio/13.jpg" class="img-responsive" alt="">
                             </div>
                             <div class="portfolio-view">
                                   <ul class="nav nav-pills">
-                                      <li><a href="../portfolio-pages/eccla.html"><i class="fa fa-link"></i></a></li>
+                                      <li><a href="../portfolio-pages/nu-chem.html"><i class="fa fa-link"></i></a></li>
 
                                   </ul>
                               </div>
                         </div>
                         <div class="portfolio-info ">
-                            <h2>ECCLA Colorado Website</h2>
+                            <h2>Northwestern Chemistry Brochure</h2>
                         </div>
                     </div>
                 </div>
