--- a/portfolio-pages/nu-chem.html
+++ b/portfolio-pages/nu-chem.html
@@ -64,45 +64,36 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <a href="https://youtu.be/P9go85UWM3M" target="_blank"><img src="../images/portfolio-details/ssc-marketing.png" class="img-responsive" alt=""></a>
+                    <a href="https://drive.google.com/file/d/0B7-QMoqsr7BnNnlJUWVfWWN6LUE/view?usp=sharing" target="_blank"><img src="../images/portfolio-details/chemistry_brochure.jpg" class="img-responsive" alt=""></a>
                 </div>
                 <div class="col-sm-6">
                     <div class="project-name overflow">
-                        <h2 class="bold">Riverland SSC Marketing Materials </h2>
+                        <h2 class="bold">Northwestern Chemistry Brochure </h2>
                         <ul class="nav navbar-nav navbar-default">
-                            <li><a href="#"><i class="fa fa-clock-o"></i>2013-2014</a></li>
-                            <li><a href="#"><i class="fa fa-tags"></i>Marketing, Web Design</a></li>
+                            <li><a href="#"><i class="fa fa-clock-o"></i>2015</a></li>
+                            <li><a href="#"><i class="fa fa-tags"></i>Marketing</a></li>
                         </ul>
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>As a Tutoring Services Coordinator for the Riverland Community College Student Success Center, I redesigned numerous internal and external marketing materials. These materials were designed to modernize the look, increase the visibility, and promote new services offered by the Student Success Center and other campus partners. Materials designed or redesigned included:</p>
-                        <ul class="elements">
-                            <li><i class="fa fa-angle-right"></i> Web-based marketing materials and webpage designs for the Student Success Center, Tutoring Center, and Parent Center.</li>
-                            <li><i class="fa fa-angle-right"></i> Printed marketing materials including brochures, bookmarks, posters, and flyers for the Student Success Center, Tutoring Center, Writing Center, Parent Center, and other departments.</li>
-                            <li><i class="fa fa-angle-right"></i> Promotional materials for various events hosted by the Student Success Center, Tutoring Center, Parent Center, and other Riverland departments and offices.</li>
-                            <li><i class="fa fa-angle-right"></i> HTML email promotional materials for events and services.</li>
-                            <li><i class="fa fa-angle-right"></i> Promotional video of marketing release of new Tutoring Center services.</li>
-                        </ul>
-                      <p>With a heavy emphasis on sustainability, I learned how to create marketing material templates using Microsoft Publisher so that these materials could be adapted and reused later. I also learned about branding and brand design, including how to promote the Riverland brand through using certain template concepts, mantaining color scheme, and being deliberate in how services were described in all materials.</p>
+                        <p>I was contracted to redesign the program brochure for the Northwestern University Chemistry department. The empahsis on this brochure redesign project was to make the brochure more clean and modern looking and to highlight the significant accolades of the chemistry programs at Northwestern. I created a design which used white space with accent branding purple color to highlight important facts. Images were included to increase the brochure design asthetic and overall visual flow. </p>
+                      <p>This brochure was designed for a wide audience and would be widely used. I followed Northwestern Branding guides to draft the look and feel of the brochure using adobe InDesign for layout and adobe Illustrator for custom graphics.</p>
                     </div>
                     <div class="skills overflow">
                         <h3>Skills:</h3>
                         <ul class="nav navbar-nav navbar-default">
                             <li><a href="#"><i class="fa fa-check-square"></i>Graphic Design</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>Web Design</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>HTML/CSS</a></li>
-                            <li><a href="#"><i class="fa fa-check-square"></i>Multimedia Production</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>Print Marketing</a></li>
                         </ul>
                     </div>
                     <div class="client overflow">
                         <h3>Client:</h3>
                         <ul class="nav navbar-nav navbar-default">
-                            <li><a href="http://www.riverland.edu" target="_blank"><i class="fa fa-bolt"></i>Riverland Community College</a></li>
+                            <li><a href="http://www.chemistry.northwestern.edu/" target="_blank"><i class="fa fa-bolt"></i>Northwestern University Chemistry</a></li>
                         </ul>
                     </div>
                     <div class="live-preview">
-                        <a href="https://drive.google.com/folderview?id=0B7-QMoqsr7BnfmVzX1pZN2trTHFWWDdKZ1FFSEpIWnFMVUVwNi04TnNnM2hWRVZCbGJWMHM&usp=sharing" target="_blank" class="btn btn-common uppercase">Live preview</a>
+                        <a href="https://drive.google.com/file/d/0B7-QMoqsr7BnNnlJUWVfWWN6LUE/view?usp=sharing" target="_blank" class="btn btn-common uppercase">Live preview</a>
                     </div>
                 </div>
             </div>
@@ -118,17 +109,17 @@
                     <div class="portfolio-wrapper">
                         <div class="portfolio-single">
                             <div class="portfolio-thumb">
-                                <img src="../images/portfolio/13.jpg" class="img-responsive" alt="">
+                                <img src="../images/portfolio/8.png" class="img-responsive" alt="">
                             </div>
                             <div class="portfolio-view">
                                   <ul class="nav nav-pills">
-                                      <li><a href="../portfolio-pages/nu-chem.html"><i class="fa fa-link"></i></a></li>
+                                      <li><a href="../portfolio-pages/ssc-marketing.html"><i class="fa fa-link"></i></a></li>
 
                                   </ul>
                               </div>
                         </div>
                         <div class="portfolio-info ">
-                            <h2>Northwestern Chemistry Brochure</h2>
+                            <h2>Riverland SSC Marketing Materials</h2>
                         </div>
                     </div>
                 </div>
